--- a/_posts/2013-01-16-story.md
+++ b/_posts/2013-01-16-story.md
@@ -5,7 +5,8 @@ title: the new story
 
 {{ page.title }}
 ================
-story
+
+<p class="meta">13 01 2013 - Wuxi</p>
 
 我开始每天将大话西游看一遍，刚开始这么做的时候，我跳过打斗，后来我看到很多之前没有关注的细节，比如至尊宝对着镜子看自己是不是猴子，还比划笑脸，后来慢慢再搞笑桥段我也跳过了，因为可能那些段子都会让我觉得笑的没那么自然，再后来我脑袋中能预演好几分钟，我知道，我可能再也看不下去了。
 
