for one sentence

--- a/_posts/2013-01-16-story.md
+++ b/_posts/2013-01-16-story.md
@@ -17,7 +17,7 @@ title: the new story
 
 会有这么一群人陪你去玩，陪你去疯，会有这么多和你脾性相似的人，有一群人，怎么都不会生气，大家在一起，不是为了攀比，不感染社会上的风俗。不把对领导，对同事的感觉带到我们生活中去。
 
-我是多么了解你们的脾性，以致我会和你们相处如此久的时光。你说我和谁同时喜欢上一个女生，然后在彼此追的时候还互相帮忙，发短信出主意的，关注进展的。虽然大家到最后都没有能够追到，但是大家都知道，也都是在心里祝福那个女孩子幸福的。当你非常非常喜欢一个女孩的时候，你真的想要的是一个女孩幸福和快乐，这幸福和快乐，是不是你给的，又能怎么样呢。这短话我在两个电影中看到。
+我是多么了解你们的脾性，以致我会和你们相处如此久的时光。你说我和谁同时喜欢上一个女生，然后在彼此追的时候还互相帮忙，发短信出主意的，关注进展的。虽然大家到最后都没有能够追到，但是大家都知道，也都是在心里祝福那个女孩子幸福的。当你非常非常喜欢一个女孩的时候，你真的想要的是一个女孩幸福和快乐，这幸福和快乐，是不是你给的，都没有关系。这短话我在两个电影中看到。
 
 
 在夏天的时候，当然要找个海边，当然要有好的海滩，我们一起跳进水里面去，会游泳不会游泳的都没关系，应该现在这样好的海滩很难找了，但是应该还是会有的吧。也最好是一个别人都在忙着工作的日子里面呢。游泳完了之后我要去吃海鲜，路边摊什么的都没有关系，
