--- a/_posts/2013-07-05-the-sortx.md
+++ b/_posts/2013-07-05-the-sortx.md
@@ -30,7 +30,8 @@ tags: [python, excel, csv, sort]
 ![I表格](/images/dtable.jpg)
 ![II表格](/images/atable.jpg)
 
-    把表格I中的A列每个元素和表格II中的B列的所有元素进行比较，如果相同，把表格II中的A列（实际问题可能是多列），拷贝到表格I中的B列。
+    把表格I中的A列每个元素和表格II中的B列的所有元素进行比较，
+    如果相同，把表格II中的A列（实际问题可能是多列），拷贝到表格I中的B列。
 
 写个脚本程序，每次处理一列，然后通过多次调用这个脚本，实现多列进行调整。这样也避免了逻辑太复杂，不过还是需要有6个参数。
 
