push the sortx pic

--- a/_posts/2013-07-05-the-sortx.md
+++ b/_posts/2013-07-05-the-sortx.md
@@ -46,7 +46,7 @@ tags: [python, excel, csv, sort]
 排序函数主体已经在[上个文章](http://fofore.com/2013/07/do-not-sort-manully/)中给出了.
 
 实际排序完的结果是：
-![sorted][/images/sorted.jpg]
+![sorted](/images/sorted.jpg)
 
 这个简单例子不知道有没有说明白这个问题，现在已经将它托管到了github上去了，随便叫个名字[sortx](https://github.com/fofore/sortx).
 
