the delete line

--- a/_posts/2013-07-05-the-sortx.md
+++ b/_posts/2013-07-05-the-sortx.md
@@ -48,7 +48,7 @@ tags: [python, excel, csv, sort]
 实际排序完的结果是：
 ![sorted](/images/sorted.jpg)
 
-这个简单例子不知道有没有说明白这个问题，现在已经将它托管到了github上去了，随便叫个名字[sortx](https://github.com/fofore/sortx).
+这个简单例子不知道有没有说明白这个问题，现在已经将它托管到了github上去了，~~随便叫个名字[sortx](https://github.com/fofore/sortx)~~, 现在已经整合到了[escex](https://github.com/fofore/escex)中去了。
 
 想要使用就直接用git clone就行了。
 
