--- a/_posts/2013-07-05-the-sortx.md
+++ b/_posts/2013-07-05-the-sortx.md
@@ -52,6 +52,10 @@ tags: [python, excel, csv, sort]
 
 想要使用就直接用git clone就行了。
 
+~~
     git clone https://github.com/fofore/sortx.git
+~~
+
+    git clone https://github.com/fofore/escex.git
 
 当然我也不断的完善中，也会加上其他处理的程序。
