change tags format

--- a/_posts/2013-08-19-memory.md
+++ b/_posts/2013-08-19-memory.md
@@ -2,7 +2,7 @@
 layout: post
 title: 十年-不成样子的回忆
 categories: [life] 
-tags: [life] [memory]
+tags: [life, memory]
 ---
 
 以前好像看过一本书，名字是不成样子的回忆，这里借用了。
