--- a/_posts/2016-02-11-pron.md
+++ b/_posts/2016-02-11-pron.md
@@ -1,3 +1,10 @@
+---
+layout: post
+title: pron
+categories: [life]
+tags: [health, vim] 
+---
+
 <html><body><div class="homograph-entry">    
     <a id="explosion_1"></a><h1 class="orth h1_entry">explosion<span class="pron">(kspl<span class="underline">o</span><sup></sup>n<span class="hwd_sound">    <a class="hwd_sound sound audio_play_button" title="Pronunciation for explosion" data-src-mp3="/sounds/1/197/19778/19778.mp3"></a>
 </span>)</span></h1>
